# Mort

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mortc.py  pyproject.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
conformance/: README.md  manifest.json  run.py
conformance/cases/reject/: freestanding_print.mx  literal_range.mx  negative_shift.mx  non_exhaustive.mx  type_mismatch.mx  use_after_move.mx  zero_divisor.mx
conformance/cases/run/: aggregates.mx  concurrency.mx  control_flow.mx  float_cast_failure.mx  generics_enums.mx  hello.mx  integer_edges.mx  integer_wrapping.mx  literals.mx  numeric_casts.mx  resources.mx  secure_random.mx  short_circuit.mx  tasks.mx  udp_loopback.mx  websocket_loopback.mx
conformance/cases/run/modules/: main.mx  math.mx
docs/: language-specification.md  production-readiness.md
examples/: arrays.mx  asm.mx  async_io.mx  collections.mx  concurrency.mx  defer.mx  enums.mx  factorial.mx  fib.mx  floats.mx  generics.mx  hello.mx  http_loopback.mx  interop.mx  kernel.mx  loops.mx  pointers.mx  resources.mx  result.mx  slices.mx  stdlib.mx  structs.mx  tcp_loopback.mx  tuples.mx  types.mx
fuzz/: atheris_frontend.py
fuzz/corpus/: enums.mx  generics.mx  ownership.mx
kernel/: README.md  boot.s  build.py  font_data.mxinc  idt.s  kmain.mx  linker.ld  mkfs.py  test.py  test_exec.py  test_fs.py  test_gfx.py
kernel/docs/: fs-design.md
kernel/programs/: ask.mx  count.mx  hello.mx  prog.ld  pstart.s
mort/: __init__.py  codegen.py  errors.py  formatter.py  fuzz.py  lexer.py  lsp.py  mort_ast.py  parser.py  project.py  tokens.py  typechecker.py
registry/: README.md  index.json
std/: algorithm.mx  atomic.mx  bytes.mx  crypto.mx  env.mx  fs.mx  http.mx  map.mx  math.mx  memory.mx  mutex.mx  net.mx  option.mx  owned_string.mx  process.mx  random.mx  result.mx  string.mx  task.mx  thread.mx  time.mx  vec.mx  websocket.mx
tests/: test_mort.py
tests/fixtures/: data_race.mx
