[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mort-lang"
version = "0.37.0"
description = "The Mort statically typed systems programming language"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "0xmortuex" },
]
keywords = ["compiler", "programming-language", "systems-programming", "c", "osdev"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
]

[project.scripts]
mortc = "mortc:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.15",
    "ziglang",
]

[project.urls]
Homepage = "https://github.com/0xmortuex/Mort"
Repository = "https://github.com/0xmortuex/Mort"
Issues = "https://github.com/0xmortuex/Mort/issues"

[tool.setuptools]
packages = ["mort"]
py-modules = ["mortc"]

[tool.setuptools.data-files]
mort-stdlib = [
    "std/algorithm.mx",
    "std/atomic.mx",
    "std/bytes.mx",
    "std/env.mx",
    "std/fs.mx",
    "std/map.mx",
    "std/math.mx",
    "std/memory.mx",
    "std/mutex.mx",
    "std/net.mx",
    "std/option.mx",
    "std/owned_string.mx",
    "std/process.mx",
    "std/random.mx",
    "std/result.mx",
    "std/string.mx",
    "std/time.mx",
    "std/thread.mx",
    "std/vec.mx",
]
